--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,13 @@ language: python
 python:
   - "2.6"
   - "2.7"
+  - "3.2"
+  - "3.3"
+  - "3.4"
+  - "3.5"
+  - "3.6"
+  - "pypy"
+  - "pypy3"
 install:
   - "pip install six requests"
   - "pip install -r requirements-tests.txt"
