--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
   - "3.5"
   - "3.6"
   - "pypy"
-  - "pypy3"
+  - "pypy3-5.5.0"
 install:
   - "pip install six requests"
   - "pip install -r requirements-tests.txt"
