Updating user tests and examples

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.cache
 .DS_Store
 .AppleDouble
 .LSOverride
@@ -5,6 +6,9 @@ Icon
 ._*
 .Spotlight-V100
 .Trashes
+
+# virtual environment
+venv
 
 /build
 /dist
