Switch easypost-python to use VCR; update many other things
 - Sets up `requests` to automatically retry on DNS or TCP connection
   issues (fixes a bug where the rerating test would sometimes fail
   because our load balancer may close the keep-alive session early and
   requests was not configured to retry in thoses cases)
 - switches to new API keys, configured via travis-ci secrets instead of
   strings
 - fixes a bunch of bare `except:` statements
 - pins a bunch of test dependencies that have dropped Python 2.7
   support upstream
 - makes tests not sleep in CI so CI tests are fast fast fast

--- a/requirements-tests.txt
+++ b/requirements-tests.txt
@@ -1,3 +1,16 @@
 pytest==4.6.*
 pytest-cov==2.8.1
 pytz
+# 45.0.0 removes python 2.x support
+setuptools>=42,<45
+# zipp after 0.5 tries to install its own setuptools at build time,
+# which fails on python 2.7
+zipp==0.5.*
+# 4.x removes python 2.x support
+vcrpy==3.*
+# >3.0.5 removes python 2.x support
+mock==3.0.5
+pytest-vcr==1.*
+# 5.0.0 removes python 2.x support
+configparser<5
+requests
