soft-deprecate python 3.3 and 3.4

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,14 @@ language: python
 matrix:
   include:
   - python: '2.7'
-  - python: '3.4'
   - python: '3.5'
   - python: '3.6'
   - python: pypy
   - python: pypy3.5
   - python: 3.7
+    dist: xenial
+    sudo: true
+  - python: 3.8
     dist: xenial
     sudo: true
 install:
