--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,7 +19,7 @@ jobs:
           python-version: ${{ matrix.pythonversion }}
       - name: install dependencies
         run: |
-          python -m pip install six requests
+          python -m pip install six requests flake8
           python -m pip install -r requirements-tests.txt
           python -m pip install -e .
       - name: lint with flake8
