--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,11 +6,23 @@ on:
   pull_request:
 
 jobs:
+  flake8:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: set up python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+      - name: install dependencies
+        run: python -m pip install flake8
+      - name: lint with flake8
+        run: flake8 --statistics easypost/ tests/ examples/
   run-tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        pythonversion: ['2.7', '3.5', '3.6', '3.8', '3.8', '3.9', 'pypy-2.7', 'pypy-3.6']
+        pythonversion: ['2.7', '3.5', '3.6', '3.7', '3.8', '3.9', 'pypy-2.7', 'pypy-3.6']
     steps:
       - uses: actions/checkout@v2
       - name: set up python
@@ -18,12 +30,7 @@ jobs:
         with:
           python-version: ${{ matrix.pythonversion }}
       - name: install dependencies
-        run: |
-          python -m pip install six requests flake8
-          python -m pip install -r requirements-tests.txt
-          python -m pip install -e .
-      - name: lint with flake8
-        run: flake8 --max-line-length=127 --statistics easypost/ tests/ examples/
+        run: "python -m pip install -r requirements-tests.txt -e ."
       - name: test with pytest
         run: pytest --cov=easypost --cov-report=term-missing --vcr-record=none --cov-fail-under=60 tests/
         env:
