Replace vcr cassettes and update tests
Some of the previous cassette responses didn't match the responses I get
from the actual easypost server, and thus replacing the old cassettes
causes a few tests to fail because of small things like changing
capitalization and street1/street2 arrangement (I guess batch
create_and_buy invokes verification?). That bothered me enough to update
the tests rather than just minimally patch the old cassettes using the
old responses.

(Except for the insurance cassette, because I get the error "Your
account is not enabled for standalone insurance purchase." So that one I
just patched over.)

--- a/tests/cassettes/test_insurance_creation.yaml
+++ b/tests/cassettes/test_insurance_creation.yaml
@@ -1,6 +1,11 @@
 interactions:
 - request:
-    body: !!python/unicode insurance%5Bamount%5D=101.0&insurance%5Bcarrier%5D=USPS&insurance%5Bfrom_address%5D%5Bcity%5D=San+Francisco&insurance%5Bfrom_address%5D%5Bcompany%5D=EasyPost&insurance%5Bfrom_address%5D%5Bphone%5D=415-456-7890&insurance%5Bfrom_address%5D%5Bstate%5D=CA&insurance%5Bfrom_address%5D%5Bstreet1%5D=118+2nd+St&insurance%5Bfrom_address%5D%5Bstreet2%5D=4th+Fl&insurance%5Bfrom_address%5D%5Bzip%5D=94105&insurance%5Bto_address%5D%5Bcity%5D=Redondo+Beach&insurance%5Bto_address%5D%5Bname%5D=Dr.+Steve+Brule&insurance%5Bto_address%5D%5Bphone%5D=310-808-5243&insurance%5Bto_address%5D%5Bstate%5D=CA&insurance%5Bto_address%5D%5Bstreet1%5D=179+N+Harbor+Dr&insurance%5Bto_address%5D%5Bzip%5D=90277&insurance%5Btracking_code%5D=EZ2000000002
+    body: !!python/unicode '{"insurance": {"tracking_code": "EZ2000000002",
+      "amount": 101.0, "carrier": "USPS", "to_address": {"city": "Redondo Beach",
+      "name": "Dr. Steve Brule", "zip": "90277", "street1": "179 N Harbor Dr",
+      "phone": "310-808-5243", "state": "CA"}, "from_address": {"city":
+      "San Francisco", "zip": "94105", "street1": "118 2nd St", "company":
+      "EasyPost", "phone": "415-456-7890", "state": "CA", "street2": "4th Fl"}}}'
     headers:
       Accept:
       - '*/*'
@@ -11,7 +16,7 @@ interactions:
       Content-Length:
       - '724'
       Content-type:
-      - application/x-www-form-urlencoded
+      - application/json
       authorization:
       - EZTK-NONE
       user-agent:
