- Narrow search and replace for VERSIONADDEDBYGITHUB to only _version.py

--- a/.github/workflows/publish_to_pypi.yml
+++ b/.github/workflows/publish_to_pypi.yml
@@ -18,6 +18,7 @@ jobs:
       with:
         find: "VERSIONADDEDBYGITHUB"
         replace: "${{ github.ref_name }}"
+        include: "easypost/_version.py"
         regex: false
     - name: Set up Python
       uses: actions/setup-python@v2
