--- a/tests/cassettes/test_tracker_create_list.yaml
+++ b/tests/cassettes/test_tracker_create_list.yaml
@@ -1,8 +1,8 @@
 interactions:
 - request:
-    body: '{"trackers": {"0": {"tracking_code": "EZ1000000001"}, "1": {"tracking_code":
-      "EZ2000000002"}, "2": {"tracking_code": "EZ3000000003"}, "3": {"tracking_code":
-      "EZ4000000004"}}}'
+    body: !!python/unicode '{"trackers": {"params": {"1": {"tracking_code": "EZ2000000002"},
+      "0": {"tracking_code": "EZ1000000001"}, "3": {"tracking_code": "EZ4000000004"},
+      "2": {"tracking_code": "EZ3000000003"}}}}'
     headers:
       Accept:
       - '*/*'
@@ -11,7 +11,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '174'
+      - '186'
       Content-type:
       - application/json
       authorization:
@@ -52,22 +52,23 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 81f96ebc61e71da3e7886e68003bdc33
+      - acf0f34861fb26ebff23419a0066281c
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb5nuq
+      - bigweb3nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq ffc213653a
-      - extlb2nuq ffc213653a
+      - intlb2nuq 88c34981dc
+      - intlb1wdc 88c34981dc
+      - extlb1wdc 88c34981dc
       x-request-id:
-      - 950d74b6-f59a-4a06-8543-e78780ded06c
+      - 11cf1870-cd5c-4f99-8d46-85a4b38ea509
       x-runtime:
-      - '0.043259'
+      - '0.045006'
       x-version-label:
-      - easypost-202201181926-d15669a17d-master
+      - easypost-202202022304-2ed53fc3ab-master
       x-xss-protection:
       - 1; mode=block
     status:
