remove the keyargument in the parameter.

--- a/tests/cassettes/test_tracker_create_list.yaml
+++ b/tests/cassettes/test_tracker_create_list.yaml
@@ -1,8 +1,8 @@
 interactions:
 - request:
-    body: !!python/unicode '{"trackers": {"params": {"1": {"tracking_code": "EZ2000000002"},
+    body: !!python/unicode '{"trackers": {"1": {"tracking_code": "EZ2000000002"},
       "0": {"tracking_code": "EZ1000000001"}, "3": {"tracking_code": "EZ4000000004"},
-      "2": {"tracking_code": "EZ3000000003"}}}}'
+      "2": {"tracking_code": "EZ3000000003"}}}'
     headers:
       Accept:
       - '*/*'
@@ -11,7 +11,7 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '186'
+      - '174'
       Content-type:
       - application/json
       authorization:
@@ -52,23 +52,22 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - acf0f34861fb26ebff23419a0066281c
+      - 64ca848261fb68b2ff23e71c00731fd7
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb3nuq
+      - bigweb9nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq 88c34981dc
-      - intlb1wdc 88c34981dc
-      - extlb1wdc 88c34981dc
+      - intlb1nuq 88c34981dc
+      - extlb2nuq 88c34981dc
       x-request-id:
-      - 11cf1870-cd5c-4f99-8d46-85a4b38ea509
+      - e3dc6de7-87f4-4cc9-97da-c8274041e633
       x-runtime:
-      - '0.045006'
+      - '0.046576'
       x-version-label:
-      - easypost-202202022304-2ed53fc3ab-master
+      - easypost-202202030055-9caa06770a-master
       x-xss-protection:
       - 1; mode=block
     status:
