--- a/tests/cassettes/test_tracker_create_list.yaml
+++ b/tests/cassettes/test_tracker_create_list.yaml
@@ -1,8 +1,8 @@
 interactions:
 - request:
-    body: '{"trackers": {"0": {"tracking_code": "EZ1000000001"}, "1": {"tracking_code":
-      "EZ2000000002"}, "2": {"tracking_code": "EZ3000000003"}, "3": {"tracking_code":
-      "EZ4000000004"}}}'
+    body: !!python/unicode '{"trackers": {"1": {"tracking_code": "EZ2000000002"},
+      "0": {"tracking_code": "EZ1000000001"}, "3": {"tracking_code": "EZ4000000004"},
+      "2": {"tracking_code": "EZ3000000003"}}}'
     headers:
       Accept:
       - '*/*'
@@ -52,22 +52,22 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 81f96ebc61e71da3e7886e68003bdc33
+      - 64ca848261fb68b2ff23e71c00731fd7
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb5nuq
+      - bigweb9nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq ffc213653a
-      - extlb2nuq ffc213653a
+      - intlb1nuq 88c34981dc
+      - extlb2nuq 88c34981dc
       x-request-id:
-      - 950d74b6-f59a-4a06-8543-e78780ded06c
+      - e3dc6de7-87f4-4cc9-97da-c8274041e633
       x-runtime:
-      - '0.043259'
+      - '0.046576'
       x-version-label:
-      - easypost-202201181926-d15669a17d-master
+      - easypost-202202030055-9caa06770a-master
       x-xss-protection:
       - 1; mode=block
     status:
