--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,30 +14,36 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
-      - name: install dependencies
-        run: python -m pip install -r requirements-dev.txt -e .
-      - name: lint with flake8
-        run: flake8 --statistics easypost/ tests/ examples/
-      - name: Check formatting with Black
-        run: black easypost/ tests/ examples/ --check
-      - name: Check formatting with iSort
-        run: isort easypost/ tests/ examples/ --check-only
+      - name: Install Dependencies
+        run: make install
+      - name: Check format
+        run: make format-check
   run-tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         pythonversion:
-          ["2.7", "3.5", "3.6", "3.7", "3.8", "3.9", "pypy-2.7", "pypy-3.6"]
+          [
+            "2.7",
+            "3.5",
+            "3.6",
+            "3.7",
+            "3.8",
+            "3.9",
+            "3.10",
+            "pypy-2.7",
+            "pypy-3.6",
+          ]
     steps:
       - uses: actions/checkout@v2
       - name: set up python
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.pythonversion }}
-      - name: install dependencies
-        run: "python -m pip install -r requirements-tests.txt -e ."
-      - name: test with pytest
-        run: pytest --cov=easypost --cov-report=term-missing --vcr-record=none --cov-fail-under=60 tests/
+      - name: Install Dependencies
+        run: make install
+      - name: Run Tests
+        run: make test
         env:
           TEST_API_KEY: ${{ secrets.TEST_API_KEY }}
           PROD_API_KEY: ${{ secrets.PROD_API_KEY }}
