--- a/tests/cassettes/test_tracker_create_list.yaml
+++ b/tests/cassettes/test_tracker_create_list.yaml
@@ -1,8 +1,8 @@
 interactions:
 - request:
-    body: !!python/unicode '{"trackers": {"1": {"tracking_code": "EZ2000000002"},
-      "0": {"tracking_code": "EZ1000000001"}, "3": {"tracking_code": "EZ4000000004"},
-      "2": {"tracking_code": "EZ3000000003"}}}'
+    body: '{"trackers": {"0": {"tracking_code": "EZ1000000001"}, "1": {"tracking_code":
+      "EZ2000000002"}, "2": {"tracking_code": "EZ3000000003"}, "3": {"tracking_code":
+      "EZ4000000004"}}}'
     headers:
       Accept:
       - '*/*'
@@ -52,7 +52,7 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 64ca848261fb68b2ff23e71c00731fd7
+      - 1cbfe2bf622932aaff234e19007fa4ba
       x-frame-options:
       - SAMEORIGIN
       x-node:
@@ -61,13 +61,14 @@ interactions:
       - none
       x-proxied:
       - intlb1nuq 88c34981dc
-      - extlb2nuq 88c34981dc
+      - intlb2wdc 88c34981dc
+      - extlb1wdc 88c34981dc
       x-request-id:
-      - e3dc6de7-87f4-4cc9-97da-c8274041e633
+      - c2fa67ef-a136-46d8-85bd-2f95c9154d88
       x-runtime:
-      - '0.046576'
+      - '0.038742'
       x-version-label:
-      - easypost-202202030055-9caa06770a-master
+      - easypost-202203092247-68fc214d14-master
       x-xss-protection:
       - 1; mode=block
     status:
