fix: matches bodies and headers on VCR cassettes (closes #144)

--- a/tests/cassettes/test_pickup_create.yaml
+++ b/tests/cassettes/test_pickup_create.yaml
@@ -29,15 +29,15 @@ interactions:
     uri: https://api.easypost.com/v2/shipments
   response:
     body:
-      string: '{"created_at":"2022-04-26T17:15:37Z","is_return":false,"messages":[],"mode":"test","options":{"currency":"USD","payment":{"type":"SENDER"},"date_advance":0},"reference":null,"status":"unknown","tracking_code":"9400100109361116713274","updated_at":"2022-04-26T17:15:38Z","batch_id":null,"batch_status":null,"batch_message":null,"customs_info":null,"from_address":{"id":"adr_7d6c90bac58411ec8255ac1f6bc72124","object":"Address","created_at":"2022-04-26T17:15:37+00:00","updated_at":"2022-04-26T17:15:37+00:00","name":"Jack
+      string: '{"created_at":"2022-05-04T20:25:48Z","is_return":false,"messages":[],"mode":"test","options":{"currency":"USD","payment":{"type":"SENDER"},"date_advance":0},"reference":null,"status":"unknown","tracking_code":"9400100109361117768785","updated_at":"2022-05-04T20:25:49Z","batch_id":null,"batch_status":null,"batch_message":null,"customs_info":null,"from_address":{"id":"adr_6284175fcbe811eca0efac1f6bc72124","object":"Address","created_at":"2022-05-04T20:25:48+00:00","updated_at":"2022-05-04T20:25:48+00:00","name":"Jack
         Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"insurance":null,"order_id":null,"parcel":{"id":"prcl_6499f3168c554c4c9c9fcdbe9304b6a4","object":"Parcel","created_at":"2022-04-26T17:15:37Z","updated_at":"2022-04-26T17:15:37Z","length":10.0,"width":8.0,"height":4.0,"predefined_package":null,"weight":15.4,"mode":"test"},"postage_label":{"object":"PostageLabel","id":"pl_535d4b3b49194277a57e42bcef40bee8","created_at":"2022-04-26T17:15:37Z","updated_at":"2022-04-26T17:15:37Z","date_advance":0,"integrated_form":"none","label_date":"2022-04-26T17:15:37Z","label_resolution":300,"label_size":"4x6","label_type":"default","label_file_type":"image/png","label_url":"https://easypost-files.s3.us-west-2.amazonaws.com/files/postage_label/20220426/9734130073b04211868a666be9908bd2.png","label_pdf_url":null,"label_zpl_url":null,"label_epl2_url":null,"label_file":null},"rates":[{"id":"rate_de25a43b5a7942dba00fcce5e76bb38c","object":"Rate","created_at":"2022-04-26T17:15:37Z","updated_at":"2022-04-26T17:15:37Z","mode":"test","service":"Express","carrier":"USPS","rate":"23.75","currency":"USD","retail_rate":"27.40","retail_currency":"USD","list_rate":"23.75","list_currency":"USD","delivery_days":null,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":null,"shipment_id":"shp_f5d76ab9047e443e9d0911dfa2d3b0b7","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_be3c525a132c4e3a9cfdc8d0e44881e9","object":"Rate","created_at":"2022-04-26T17:15:37Z","updated_at":"2022-04-26T17:15:37Z","mode":"test","service":"Priority","carrier":"USPS","rate":"7.37","currency":"USD","retail_rate":"8.70","retail_currency":"USD","list_rate":"7.37","list_currency":"USD","delivery_days":1,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":1,"shipment_id":"shp_f5d76ab9047e443e9d0911dfa2d3b0b7","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_42172733d4f343f78493fd1052542f3f","object":"Rate","created_at":"2022-04-26T17:15:37Z","updated_at":"2022-04-26T17:15:37Z","mode":"test","service":"First","carrier":"USPS","rate":"5.49","currency":"USD","retail_rate":"5.49","retail_currency":"USD","list_rate":"5.49","list_currency":"USD","delivery_days":2,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":2,"shipment_id":"shp_f5d76ab9047e443e9d0911dfa2d3b0b7","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_7470661824f840a0815299dbfc0635b9","object":"Rate","created_at":"2022-04-26T17:15:37Z","updated_at":"2022-04-26T17:15:37Z","mode":"test","service":"ParcelSelect","carrier":"USPS","rate":"7.22","currency":"USD","retail_rate":"7.22","retail_currency":"USD","list_rate":"7.22","list_currency":"USD","delivery_days":2,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":2,"shipment_id":"shp_f5d76ab9047e443e9d0911dfa2d3b0b7","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"}],"refund_status":null,"scan_form":null,"selected_rate":{"id":"rate_42172733d4f343f78493fd1052542f3f","object":"Rate","created_at":"2022-04-26T17:15:37Z","updated_at":"2022-04-26T17:15:37Z","mode":"test","service":"First","carrier":"USPS","rate":"5.49","currency":"USD","retail_rate":"5.49","retail_currency":"USD","list_rate":"5.49","list_currency":"USD","delivery_days":2,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":2,"shipment_id":"shp_f5d76ab9047e443e9d0911dfa2d3b0b7","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},"tracker":{"id":"trk_173417fbda7b4cafa549f15e67c78134","object":"Tracker","mode":"test","tracking_code":"9400100109361116713274","status":"unknown","status_detail":"unknown","created_at":"2022-04-26T17:15:38Z","updated_at":"2022-04-26T17:15:38Z","signed_by":null,"weight":null,"est_delivery_date":null,"shipment_id":"shp_f5d76ab9047e443e9d0911dfa2d3b0b7","carrier":"USPS","tracking_details":[],"fees":[],"carrier_detail":null,"public_url":"https://track.easypost.com/djE6dHJrXzE3MzQxN2ZiZGE3YjRjYWZhNTQ5ZjE1ZTY3Yzc4MTM0"},"to_address":{"id":"adr_7d6a578dc58411ec8254ac1f6bc72124","object":"Address","created_at":"2022-04-26T17:15:37+00:00","updated_at":"2022-04-26T17:15:37+00:00","name":"JACK
+        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"insurance":null,"order_id":null,"parcel":{"id":"prcl_be57fcb4f69d4772b1efd6f759f4f843","object":"Parcel","created_at":"2022-05-04T20:25:48Z","updated_at":"2022-05-04T20:25:48Z","length":10.0,"width":8.0,"height":4.0,"predefined_package":null,"weight":15.4,"mode":"test"},"postage_label":{"object":"PostageLabel","id":"pl_b510e5bba5af477b92123b661ca52e62","created_at":"2022-05-04T20:25:49Z","updated_at":"2022-05-04T20:25:49Z","date_advance":0,"integrated_form":"none","label_date":"2022-05-04T20:25:49Z","label_resolution":300,"label_size":"4x6","label_type":"default","label_file_type":"image/png","label_url":"https://easypost-files.s3.us-west-2.amazonaws.com/files/postage_label/20220504/cc1efbff41dd46b3832391ebfacfc768.png","label_pdf_url":null,"label_zpl_url":null,"label_epl2_url":null,"label_file":null},"rates":[{"id":"rate_3b35d41d419f4c269d61ed816f6e35ed","object":"Rate","created_at":"2022-05-04T20:25:48Z","updated_at":"2022-05-04T20:25:48Z","mode":"test","service":"Express","carrier":"USPS","rate":"23.75","currency":"USD","retail_rate":"27.40","retail_currency":"USD","list_rate":"23.75","list_currency":"USD","delivery_days":null,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":null,"shipment_id":"shp_8fb56db4b9504711a625163e5b35af59","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_a85628cf4c514b25b4a74eec4fd7aff7","object":"Rate","created_at":"2022-05-04T20:25:48Z","updated_at":"2022-05-04T20:25:48Z","mode":"test","service":"ParcelSelect","carrier":"USPS","rate":"7.22","currency":"USD","retail_rate":"7.22","retail_currency":"USD","list_rate":"7.22","list_currency":"USD","delivery_days":2,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":2,"shipment_id":"shp_8fb56db4b9504711a625163e5b35af59","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_539a9bf42f2f42d98c6f5c91a069a6f9","object":"Rate","created_at":"2022-05-04T20:25:48Z","updated_at":"2022-05-04T20:25:48Z","mode":"test","service":"Priority","carrier":"USPS","rate":"7.37","currency":"USD","retail_rate":"8.70","retail_currency":"USD","list_rate":"7.37","list_currency":"USD","delivery_days":1,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":1,"shipment_id":"shp_8fb56db4b9504711a625163e5b35af59","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_4c332953c4f54099bce85e154ad51f02","object":"Rate","created_at":"2022-05-04T20:25:48Z","updated_at":"2022-05-04T20:25:48Z","mode":"test","service":"First","carrier":"USPS","rate":"5.49","currency":"USD","retail_rate":"5.49","retail_currency":"USD","list_rate":"5.49","list_currency":"USD","delivery_days":2,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":2,"shipment_id":"shp_8fb56db4b9504711a625163e5b35af59","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"}],"refund_status":null,"scan_form":null,"selected_rate":{"id":"rate_4c332953c4f54099bce85e154ad51f02","object":"Rate","created_at":"2022-05-04T20:25:49Z","updated_at":"2022-05-04T20:25:49Z","mode":"test","service":"First","carrier":"USPS","rate":"5.49","currency":"USD","retail_rate":"5.49","retail_currency":"USD","list_rate":"5.49","list_currency":"USD","delivery_days":2,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":2,"shipment_id":"shp_8fb56db4b9504711a625163e5b35af59","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},"tracker":{"id":"trk_fb495beb021445a9a1dbfa23cb0b765f","object":"Tracker","mode":"test","tracking_code":"9400100109361117768785","status":"unknown","status_detail":"unknown","created_at":"2022-05-04T20:25:49Z","updated_at":"2022-05-04T20:25:49Z","signed_by":null,"weight":null,"est_delivery_date":null,"shipment_id":"shp_8fb56db4b9504711a625163e5b35af59","carrier":"USPS","tracking_details":[],"fees":[],"carrier_detail":null,"public_url":"https://track.easypost.com/djE6dHJrX2ZiNDk1YmViMDIxNDQ1YTlhMWRiZmEyM2NiMGI3NjVm"},"to_address":{"id":"adr_628265c0cbe811ec9165ac1f6b0a0d1e","object":"Address","created_at":"2022-05-04T20:25:48+00:00","updated_at":"2022-05-04T20:25:48+00:00","name":"JACK
         SPARROW","company":"EASYPOST","street1":"388 TOWNSEND ST APT 20","street2":null,"city":"SAN
-        FRANCISCO","state":"CA","zip":"94107-1670","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":true,"federal_tax_id":null,"state_tax_id":null,"verifications":{"zip4":{"success":true,"errors":[],"details":null},"delivery":{"success":true,"errors":[],"details":{"latitude":37.77551,"longitude":-122.39697,"time_zone":"America/Los_Angeles"}}}},"usps_zone":1,"return_address":{"id":"adr_7d6c90bac58411ec8255ac1f6bc72124","object":"Address","created_at":"2022-04-26T17:15:37+00:00","updated_at":"2022-04-26T17:15:37+00:00","name":"Jack
+        FRANCISCO","state":"CA","zip":"94107-1670","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":true,"federal_tax_id":null,"state_tax_id":null,"verifications":{"zip4":{"success":true,"errors":[],"details":null},"delivery":{"success":true,"errors":[],"details":{"latitude":37.77551,"longitude":-122.39697,"time_zone":"America/Los_Angeles"}}}},"usps_zone":1,"return_address":{"id":"adr_6284175fcbe811eca0efac1f6bc72124","object":"Address","created_at":"2022-05-04T20:25:48+00:00","updated_at":"2022-05-04T20:25:48+00:00","name":"Jack
         Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"buyer_address":{"id":"adr_7d6a578dc58411ec8254ac1f6bc72124","object":"Address","created_at":"2022-04-26T17:15:37+00:00","updated_at":"2022-04-26T17:15:37+00:00","name":"JACK
+        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"buyer_address":{"id":"adr_628265c0cbe811ec9165ac1f6b0a0d1e","object":"Address","created_at":"2022-05-04T20:25:48+00:00","updated_at":"2022-05-04T20:25:48+00:00","name":"JACK
         SPARROW","company":"EASYPOST","street1":"388 TOWNSEND ST APT 20","street2":null,"city":"SAN
-        FRANCISCO","state":"CA","zip":"94107-1670","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":true,"federal_tax_id":null,"state_tax_id":null,"verifications":{"zip4":{"success":true,"errors":[],"details":null},"delivery":{"success":true,"errors":[],"details":{"latitude":37.77551,"longitude":-122.39697,"time_zone":"America/Los_Angeles"}}}},"forms":[],"fees":[{"object":"Fee","type":"LabelFee","amount":"0.00000","charged":true,"refunded":false},{"object":"Fee","type":"PostageFee","amount":"5.49000","charged":true,"refunded":false}],"id":"shp_f5d76ab9047e443e9d0911dfa2d3b0b7","object":"Shipment"}'
+        FRANCISCO","state":"CA","zip":"94107-1670","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":true,"federal_tax_id":null,"state_tax_id":null,"verifications":{"zip4":{"success":true,"errors":[],"details":null},"delivery":{"success":true,"errors":[],"details":{"latitude":37.77551,"longitude":-122.39697,"time_zone":"America/Los_Angeles"}}}},"forms":[],"fees":[{"object":"Fee","type":"LabelFee","amount":"0.00000","charged":true,"refunded":false},{"object":"Fee","type":"PostageFee","amount":"5.49000","charged":true,"refunded":false}],"id":"shp_8fb56db4b9504711a625163e5b35af59","object":"Shipment"}'
     headers:
       cache-control:
       - no-cache, no-store
@@ -46,11 +46,11 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"c5717fd29ed06f623cf42f220636d4ff"
+      - W/"000d3c39cff2b51329dd06aa16326edb"
       expires:
       - '0'
       location:
-      - /api/v2/shipments/shp_f5d76ab9047e443e9d0911dfa2d3b0b7
+      - /api/v2/shipments/shp_8fb56db4b9504711a625163e5b35af59
       pragma:
       - no-cache
       referrer-policy:
@@ -66,20 +66,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 19bdb4c1626828b9e786b8a1001a622c
+      - 62b330bd6272e14ce786b89f001620c9
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb8nuq
+      - bigweb6nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq fde591f008
-      - extlb2nuq fde591f008
+      - intlb2nuq fde591f008
+      - extlb1nuq c51cdb8bf2
       x-runtime:
-      - '0.996982'
+      - '1.099036'
       x-version-label:
-      - easypost-202204251804-93ddab36b5-master
+      - easypost-202205041833-02730cc398-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -88,9 +88,9 @@ interactions:
 - request:
     body: '{"pickup": {"address": {"name": "Jack Sparrow", "company": "EasyPost",
       "street1": "388 Townsend St", "street2": "Apt 20", "city": "San Francisco",
-      "state": "CA", "zip": "94107", "phone": "5555555555"}, "min_datetime": "2022-04-27",
-      "max_datetime": "2022-04-27", "instructions": "Pickup at front door", "shipment":
-      {"id": "shp_f5d76ab9047e443e9d0911dfa2d3b0b7"}}}'
+      "state": "CA", "zip": "94107", "phone": "5555555555"}, "min_datetime": "2022-05-06",
+      "max_datetime": "2022-05-06", "instructions": "Pickup at front door", "shipment":
+      {"id": "shp_8fb56db4b9504711a625163e5b35af59"}}}'
     headers:
       Accept:
       - '*/*'
@@ -112,10 +112,10 @@ interactions:
     uri: https://api.easypost.com/v2/pickups
   response:
     body:
-      string: '{"id":"pickup_22029bc17d0b40d0bb139b61edb30dbd","object":"Pickup","created_at":"2022-04-26T17:15:38Z","updated_at":"2022-04-26T17:15:38Z","mode":"test","status":"unknown","reference":null,"min_datetime":"2022-04-27T00:00:00Z","max_datetime":"2022-04-27T00:00:00Z","is_account_address":false,"instructions":"Pickup
-        at front door","messages":[],"confirmation":null,"address":{"id":"adr_7e0e7089c58411ecb81dac1f6b0a0d1e","object":"Address","created_at":"2022-04-26T17:15:38+00:00","updated_at":"2022-04-26T17:15:38+00:00","name":"Jack
+      string: '{"id":"pickup_9c545da309d749a1b673e1cd791e48e6","object":"Pickup","created_at":"2022-05-04T20:25:49Z","updated_at":"2022-05-04T20:25:49Z","mode":"test","status":"unknown","reference":null,"min_datetime":"2022-05-06T00:00:00Z","max_datetime":"2022-05-06T00:00:00Z","is_account_address":false,"instructions":"Pickup
+        at front door","messages":[],"confirmation":null,"address":{"id":"adr_633502e9cbe811ec88e2ac1f6bc7b362","object":"Address","created_at":"2022-05-04T20:25:49+00:00","updated_at":"2022-05-04T20:25:49+00:00","name":"Jack
         Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"carrier_accounts":[],"pickup_rates":[{"mode":"test","service":"NextDay","rate":"0.00","currency":"USD","created_at":"2022-04-26T17:15:39Z","updated_at":"2022-04-26T17:15:39Z","carrier":"USPS","pickup_id":"pickup_22029bc17d0b40d0bb139b61edb30dbd","id":"pickuprate_b4840e1163e643c7a14185e9850f1666","object":"PickupRate"}]}'
+        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"carrier_accounts":[],"pickup_rates":[{"mode":"test","service":"NextDay","rate":"0.00","currency":"USD","created_at":"2022-05-04T20:25:50Z","updated_at":"2022-05-04T20:25:50Z","carrier":"USPS","pickup_id":"pickup_9c545da309d749a1b673e1cd791e48e6","id":"pickuprate_05c860a4ae034b4583dac7bde3c97002","object":"PickupRate"}]}'
     headers:
       cache-control:
       - no-cache, no-store
@@ -124,7 +124,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"f2eea40f8e9c8e2c091cab21fa21f227"
+      - W/"e61a8dbade6374518e7ec2e104041c44"
       expires:
       - '0'
       pragma:
@@ -142,20 +142,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - 19bdb4c1626828bae786b8a1001a6278
+      - 62b330bd6272e14de786b89f0016213d
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb5nuq
+      - bigweb9nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq fde591f008
-      - extlb2nuq fde591f008
+      - intlb2nuq fde591f008
+      - extlb1nuq c51cdb8bf2
       x-runtime:
-      - '1.633757'
+      - '0.805318'
       x-version-label:
-      - easypost-202204251804-93ddab36b5-master
+      - easypost-202205041833-02730cc398-master
       x-xss-protection:
       - 1; mode=block
     status:
