--- a/tests/cassettes/test_shipment_get_lowest_smartrate.yaml
+++ b/tests/cassettes/test_shipment_get_lowest_smartrate.yaml
@@ -27,15 +27,15 @@ interactions:
     uri: https://api.easypost.com/v2/shipments
   response:
     body:
-      string: '{"created_at":"2022-04-28T18:59:21Z","is_return":false,"messages":[],"mode":"test","options":{"currency":"USD","payment":{"type":"SENDER"},"date_advance":0},"reference":null,"status":"unknown","tracking_code":null,"updated_at":"2022-04-28T18:59:21Z","batch_id":null,"batch_status":null,"batch_message":null,"customs_info":null,"from_address":{"id":"adr_50039c8bc72511ec879dac1f6b0a0d1e","object":"Address","created_at":"2022-04-28T18:59:21+00:00","updated_at":"2022-04-28T18:59:21+00:00","name":"Jack
+      string: '{"created_at":"2022-05-04T20:26:24Z","is_return":false,"messages":[],"mode":"test","options":{"currency":"USD","payment":{"type":"SENDER"},"date_advance":0},"reference":null,"status":"unknown","tracking_code":null,"updated_at":"2022-05-04T20:26:24Z","batch_id":null,"batch_status":null,"batch_message":null,"customs_info":null,"from_address":{"id":"adr_7804e92bcbe811eca58eac1f6bc72124","object":"Address","created_at":"2022-05-04T20:26:24+00:00","updated_at":"2022-05-04T20:26:24+00:00","name":"Jack
         Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"insurance":null,"order_id":null,"parcel":{"id":"prcl_17345230780f4d678c9238bddd58a352","object":"Parcel","created_at":"2022-04-28T18:59:21Z","updated_at":"2022-04-28T18:59:21Z","length":10.0,"width":8.0,"height":4.0,"predefined_package":null,"weight":15.4,"mode":"test"},"postage_label":null,"rates":[{"id":"rate_076a98d189974521aa38e589a7f56ebe","object":"Rate","created_at":"2022-04-28T18:59:21Z","updated_at":"2022-04-28T18:59:21Z","mode":"test","service":"ParcelSelect","carrier":"USPS","rate":"7.22","currency":"USD","retail_rate":"7.22","retail_currency":"USD","list_rate":"7.22","list_currency":"USD","delivery_days":2,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":2,"shipment_id":"shp_e984ef2c29b6496da5b8f285a7a7a611","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_40b1192ce3d8411da5a24dd9ea3a9d44","object":"Rate","created_at":"2022-04-28T18:59:21Z","updated_at":"2022-04-28T18:59:21Z","mode":"test","service":"First","carrier":"USPS","rate":"5.49","currency":"USD","retail_rate":"5.49","retail_currency":"USD","list_rate":"5.49","list_currency":"USD","delivery_days":2,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":2,"shipment_id":"shp_e984ef2c29b6496da5b8f285a7a7a611","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_788645615e2040f8a369a60b1786491d","object":"Rate","created_at":"2022-04-28T18:59:21Z","updated_at":"2022-04-28T18:59:21Z","mode":"test","service":"Priority","carrier":"USPS","rate":"7.37","currency":"USD","retail_rate":"8.70","retail_currency":"USD","list_rate":"7.37","list_currency":"USD","delivery_days":1,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":1,"shipment_id":"shp_e984ef2c29b6496da5b8f285a7a7a611","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_2241d0fec79846f8b19d9f4b163db825","object":"Rate","created_at":"2022-04-28T18:59:21Z","updated_at":"2022-04-28T18:59:21Z","mode":"test","service":"Express","carrier":"USPS","rate":"23.75","currency":"USD","retail_rate":"27.40","retail_currency":"USD","list_rate":"23.75","list_currency":"USD","delivery_days":null,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":null,"shipment_id":"shp_e984ef2c29b6496da5b8f285a7a7a611","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"}],"refund_status":null,"scan_form":null,"selected_rate":null,"tracker":null,"to_address":{"id":"adr_50021074c72511ec879cac1f6b0a0d1e","object":"Address","created_at":"2022-04-28T18:59:21+00:00","updated_at":"2022-04-28T18:59:21+00:00","name":"Jack
+        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"insurance":null,"order_id":null,"parcel":{"id":"prcl_bff25ff71c6f47e7a5df9edcd5853de4","object":"Parcel","created_at":"2022-05-04T20:26:24Z","updated_at":"2022-05-04T20:26:24Z","length":10.0,"width":8.0,"height":4.0,"predefined_package":null,"weight":15.4,"mode":"test"},"postage_label":null,"rates":[{"id":"rate_0d1598a88c6d448fabba046ba602504a","object":"Rate","created_at":"2022-05-04T20:26:25Z","updated_at":"2022-05-04T20:26:25Z","mode":"test","service":"ParcelSelect","carrier":"USPS","rate":"7.22","currency":"USD","retail_rate":"7.22","retail_currency":"USD","list_rate":"7.22","list_currency":"USD","delivery_days":2,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":2,"shipment_id":"shp_a75e7ef9f90f4d69a3197e1fd5dce15b","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_2b1ce8b41e5b4b14b88bc81577a1888e","object":"Rate","created_at":"2022-05-04T20:26:25Z","updated_at":"2022-05-04T20:26:25Z","mode":"test","service":"First","carrier":"USPS","rate":"5.49","currency":"USD","retail_rate":"5.49","retail_currency":"USD","list_rate":"5.49","list_currency":"USD","delivery_days":2,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":2,"shipment_id":"shp_a75e7ef9f90f4d69a3197e1fd5dce15b","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_8da980fb97214472a34e60ddaa953b16","object":"Rate","created_at":"2022-05-04T20:26:25Z","updated_at":"2022-05-04T20:26:25Z","mode":"test","service":"Express","carrier":"USPS","rate":"23.75","currency":"USD","retail_rate":"27.40","retail_currency":"USD","list_rate":"23.75","list_currency":"USD","delivery_days":null,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":null,"shipment_id":"shp_a75e7ef9f90f4d69a3197e1fd5dce15b","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"},{"id":"rate_88bb96e6d40147a3b3ca6a205c547288","object":"Rate","created_at":"2022-05-04T20:26:25Z","updated_at":"2022-05-04T20:26:25Z","mode":"test","service":"Priority","carrier":"USPS","rate":"7.37","currency":"USD","retail_rate":"8.70","retail_currency":"USD","list_rate":"7.37","list_currency":"USD","delivery_days":1,"delivery_date":null,"delivery_date_guaranteed":false,"est_delivery_days":1,"shipment_id":"shp_a75e7ef9f90f4d69a3197e1fd5dce15b","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e"}],"refund_status":null,"scan_form":null,"selected_rate":null,"tracker":null,"to_address":{"id":"adr_7802ff50cbe811ec95fbac1f6b0a0d1e","object":"Address","created_at":"2022-05-04T20:26:24+00:00","updated_at":"2022-05-04T20:26:24+00:00","name":"Jack
         Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"usps_zone":1,"return_address":{"id":"adr_50039c8bc72511ec879dac1f6b0a0d1e","object":"Address","created_at":"2022-04-28T18:59:21+00:00","updated_at":"2022-04-28T18:59:21+00:00","name":"Jack
+        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"usps_zone":1,"return_address":{"id":"adr_7804e92bcbe811eca58eac1f6bc72124","object":"Address","created_at":"2022-05-04T20:26:24+00:00","updated_at":"2022-05-04T20:26:24+00:00","name":"Jack
         Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"buyer_address":{"id":"adr_50021074c72511ec879cac1f6b0a0d1e","object":"Address","created_at":"2022-04-28T18:59:21+00:00","updated_at":"2022-04-28T18:59:21+00:00","name":"Jack
+        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"buyer_address":{"id":"adr_7802ff50cbe811ec95fbac1f6b0a0d1e","object":"Address","created_at":"2022-05-04T20:26:24+00:00","updated_at":"2022-05-04T20:26:24+00:00","name":"Jack
         Sparrow","company":"EasyPost","street1":"388 Townsend St","street2":"Apt 20","city":"San
-        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"forms":[],"fees":[],"id":"shp_e984ef2c29b6496da5b8f285a7a7a611","object":"Shipment"}'
+        Francisco","state":"CA","zip":"94107","country":"US","phone":"5555555555","email":null,"mode":"test","carrier_facility":null,"residential":null,"federal_tax_id":null,"state_tax_id":null,"verifications":{}},"forms":[],"fees":[],"id":"shp_a75e7ef9f90f4d69a3197e1fd5dce15b","object":"Shipment"}'
     headers:
       cache-control:
       - no-cache, no-store
@@ -44,11 +44,11 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"6e0dc254ebb4eadba7870cc2c82258c9"
+      - W/"04a868aa9320370213340ce772fde969"
       expires:
       - '0'
       location:
-      - /api/v2/shipments/shp_e984ef2c29b6496da5b8f285a7a7a611
+      - /api/v2/shipments/shp_a75e7ef9f90f4d69a3197e1fd5dce15b
       pragma:
       - no-cache
       referrer-policy:
@@ -59,27 +59,25 @@ interactions:
       - chunked
       x-backend:
       - easypost
-      x-canary:
-      - direct
       x-content-type-options:
       - nosniff
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f1b599b4626ae409e7873002000ce710
+      - 78245fb56272e170e786b9060013b0f3
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb7nuq
+      - bigweb1nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
       - intlb1nuq fde591f008
-      - extlb2nuq fde591f008
+      - extlb2nuq c51cdb8bf2
       x-runtime:
-      - '0.270848'
+      - '0.312797'
       x-version-label:
-      - easypost-202204281816-b5dc9c446b-master
+      - easypost-202205041833-02730cc398-master
       x-xss-protection:
       - 1; mode=block
     status:
@@ -101,10 +99,10 @@ interactions:
       x-client-user-agent:
       - suppressed
     method: GET
-    uri: https://api.easypost.com/v2/shipments/shp_e984ef2c29b6496da5b8f285a7a7a611/smartrate
+    uri: https://api.easypost.com/v2/shipments/shp_a75e7ef9f90f4d69a3197e1fd5dce15b/smartrate
   response:
     body:
-      string: '{"result":[{"carrier":"USPS","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e","created_at":"2022-04-28T18:59:21Z","currency":"USD","delivery_date":null,"delivery_date_guaranteed":false,"delivery_days":2,"est_delivery_days":2,"id":"rate_076a98d189974521aa38e589a7f56ebe","list_currency":"USD","list_rate":7.22,"mode":"test","object":"Rate","rate":7.22,"retail_currency":"USD","retail_rate":7.22,"service":"ParcelSelect","shipment_id":"shp_e984ef2c29b6496da5b8f285a7a7a611","time_in_transit":{"percentile_50":1,"percentile_75":2,"percentile_85":3,"percentile_90":4,"percentile_95":4,"percentile_97":5,"percentile_99":7},"updated_at":"2022-04-28T18:59:21Z"},{"carrier":"USPS","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e","created_at":"2022-04-28T18:59:21Z","currency":"USD","delivery_date":null,"delivery_date_guaranteed":false,"delivery_days":2,"est_delivery_days":2,"id":"rate_40b1192ce3d8411da5a24dd9ea3a9d44","list_currency":"USD","list_rate":5.49,"mode":"test","object":"Rate","rate":5.49,"retail_currency":"USD","retail_rate":5.49,"service":"First","shipment_id":"shp_e984ef2c29b6496da5b8f285a7a7a611","time_in_transit":{"percentile_50":1,"percentile_75":1,"percentile_85":1,"percentile_90":2,"percentile_95":2,"percentile_97":2,"percentile_99":3},"updated_at":"2022-04-28T18:59:21Z"},{"carrier":"USPS","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e","created_at":"2022-04-28T18:59:21Z","currency":"USD","delivery_date":null,"delivery_date_guaranteed":false,"delivery_days":1,"est_delivery_days":1,"id":"rate_788645615e2040f8a369a60b1786491d","list_currency":"USD","list_rate":7.37,"mode":"test","object":"Rate","rate":7.37,"retail_currency":"USD","retail_rate":8.7,"service":"Priority","shipment_id":"shp_e984ef2c29b6496da5b8f285a7a7a611","time_in_transit":{"percentile_50":1,"percentile_75":1,"percentile_85":1,"percentile_90":1,"percentile_95":2,"percentile_97":2,"percentile_99":4},"updated_at":"2022-04-28T18:59:21Z"},{"carrier":"USPS","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e","created_at":"2022-04-28T18:59:21Z","currency":"USD","delivery_date":null,"delivery_date_guaranteed":false,"delivery_days":null,"est_delivery_days":null,"id":"rate_2241d0fec79846f8b19d9f4b163db825","list_currency":"USD","list_rate":23.75,"mode":"test","object":"Rate","rate":23.75,"retail_currency":"USD","retail_rate":27.4,"service":"Express","shipment_id":"shp_e984ef2c29b6496da5b8f285a7a7a611","time_in_transit":{"percentile_50":1,"percentile_75":1,"percentile_85":1,"percentile_90":1,"percentile_95":2,"percentile_97":2,"percentile_99":4},"updated_at":"2022-04-28T18:59:21Z"}]}'
+      string: '{"result":[{"carrier":"USPS","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e","created_at":"2022-05-04T20:26:25Z","currency":"USD","delivery_date":null,"delivery_date_guaranteed":false,"delivery_days":2,"est_delivery_days":2,"id":"rate_0d1598a88c6d448fabba046ba602504a","list_currency":"USD","list_rate":7.22,"mode":"test","object":"Rate","rate":7.22,"retail_currency":"USD","retail_rate":7.22,"service":"ParcelSelect","shipment_id":"shp_a75e7ef9f90f4d69a3197e1fd5dce15b","time_in_transit":{"percentile_50":1,"percentile_75":2,"percentile_85":3,"percentile_90":3,"percentile_95":4,"percentile_97":5,"percentile_99":7},"updated_at":"2022-05-04T20:26:25Z"},{"carrier":"USPS","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e","created_at":"2022-05-04T20:26:25Z","currency":"USD","delivery_date":null,"delivery_date_guaranteed":false,"delivery_days":2,"est_delivery_days":2,"id":"rate_2b1ce8b41e5b4b14b88bc81577a1888e","list_currency":"USD","list_rate":5.49,"mode":"test","object":"Rate","rate":5.49,"retail_currency":"USD","retail_rate":5.49,"service":"First","shipment_id":"shp_a75e7ef9f90f4d69a3197e1fd5dce15b","time_in_transit":{"percentile_50":1,"percentile_75":1,"percentile_85":1,"percentile_90":2,"percentile_95":2,"percentile_97":2,"percentile_99":3},"updated_at":"2022-05-04T20:26:25Z"},{"carrier":"USPS","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e","created_at":"2022-05-04T20:26:25Z","currency":"USD","delivery_date":null,"delivery_date_guaranteed":false,"delivery_days":null,"est_delivery_days":null,"id":"rate_8da980fb97214472a34e60ddaa953b16","list_currency":"USD","list_rate":23.75,"mode":"test","object":"Rate","rate":23.75,"retail_currency":"USD","retail_rate":27.4,"service":"Express","shipment_id":"shp_a75e7ef9f90f4d69a3197e1fd5dce15b","time_in_transit":{"percentile_50":1,"percentile_75":1,"percentile_85":1,"percentile_90":1,"percentile_95":2,"percentile_97":2,"percentile_99":4},"updated_at":"2022-05-04T20:26:25Z"},{"carrier":"USPS","carrier_account_id":"ca_b25657e9896e4d63ac8151ac346ac41e","created_at":"2022-05-04T20:26:25Z","currency":"USD","delivery_date":null,"delivery_date_guaranteed":false,"delivery_days":1,"est_delivery_days":1,"id":"rate_88bb96e6d40147a3b3ca6a205c547288","list_currency":"USD","list_rate":7.37,"mode":"test","object":"Rate","rate":7.37,"retail_currency":"USD","retail_rate":8.7,"service":"Priority","shipment_id":"shp_a75e7ef9f90f4d69a3197e1fd5dce15b","time_in_transit":{"percentile_50":1,"percentile_75":1,"percentile_85":1,"percentile_90":1,"percentile_95":2,"percentile_97":2,"percentile_99":3},"updated_at":"2022-05-04T20:26:25Z"}]}'
     headers:
       cache-control:
       - no-cache, no-store
@@ -113,7 +111,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"fe2fd8f33d9108258c405815a1041d90"
+      - W/"28249fac14a5226903a47218e0b2853b"
       expires:
       - '0'
       pragma:
@@ -131,20 +129,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - f1b599b4626ae409e7873002000ce720
+      - 78245fb56272e171e786b9060013b110
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb6nuq
+      - bigweb4nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
       - intlb2nuq fde591f008
-      - extlb2nuq fde591f008
+      - extlb2nuq c51cdb8bf2
       x-runtime:
-      - '0.067815'
+      - '0.063599'
       x-version-label:
-      - easypost-202204281816-b5dc9c446b-master
+      - easypost-202205041833-02730cc398-master
       x-xss-protection:
       - 1; mode=block
     status:
